RESOLVED FIXED25285
REGRESSION (r42569): Profiles cannot be selected in inspector profiler
https://bugs.webkit.org/show_bug.cgi?id=25285
Summary REGRESSION (r42569): Profiles cannot be selected in inspector profiler
Geoffrey Garen
Reported 2009-04-18 17:51:12 PDT
4/16/09 2:23 AM Oliver Hunt: * SUMMARY Revision r42569 added code that clears the event listener function and globalObject references, which breaks (at the very least) the profiler. * STEPS TO REPRODUCE 1. Go to https://bugs.webkit.org/attachment.cgi?id=29532 2. Open the inspector 3. Go to the profiles pane 4. enable profiling 5. return to the safari window 6. reload 7. return to the inspector window 8. attempt to focus/select the create profile * RESULTS The profile cannot be selected, but we should be able to. I would guess that this has potential to effect many sites. * REGRESSION Introduced by r42569 Commenting out 155 m_jsFunction = 0; 156 m_globalObject = 0; in JSEventListener::clearJSFunctionInline() Restores "Correct" behaviour -- don't know able actual correctness however 4/17/09 2:36 PM David Kilzer: http://trac.webkit.org/changeset/42569
Attachments
patch (1.58 KB, patch)
2009-04-18 17:51 PDT, Geoffrey Garen
zwarich: review+
patch w/test (5.25 KB, patch)
2009-04-18 17:59 PDT, Geoffrey Garen
ggaren: review+
Geoffrey Garen
Comment 1 2009-04-18 17:51:41 PDT
Cameron Zwarich (cpst)
Comment 2 2009-04-18 17:53:51 PDT
Comment on attachment 29601 [details] patch r=me, but you should either add a test or mention why you can't in the ChangeLog.
Geoffrey Garen
Comment 3 2009-04-18 17:59:49 PDT
Created attachment 29602 [details] patch w/test Oops! Forgot to attach the test. Here it is. I'll invalidate the last patch, and mark this one r+.
David Kilzer (:ddkilzer)
Comment 4 2009-04-18 18:01:22 PDT
Geoffrey Garen
Comment 5 2009-04-18 18:01:43 PDT
Note You need to log in before you can comment on or make changes to this bug.