WebCore:

2009-04-18  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Cameron Zwarich.

        Fixed <rdar://problem/6797442> | https://bugs.webkit.org/show_bug.cgi?id=25285
        REGRESSION (r42569): Profiles cannot be selected in inspector profiler

        EventListeners are shared; RegisteredEventListeners are not. Therefore,
        when a node wrapper needs to invalidate the node's JS event listeners,
        it should invalidate its RegisteredEventListeners, not its EventListeners.
        Otherwise, it might invalidate an EventListener shared by another node.

        * dom/RegisteredEventListener.h:
        (WebCore::invalidateEventListeners): ditto

LayoutTests:

2009-04-18  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Cameron Zwarich.

        Test for <rdar://problem/6797442> | https://bugs.webkit.org/show_bug.cgi?id=25285
        REGRESSION (r42569): Profiles cannot be selected in inspector profiler

        * fast/events/event-listener-sharing-expected.txt: Added.
        * fast/events/event-listener-sharing.html: Added.
        * fast/events/resources/event-listener-sharing.js: Added.
        (gc):
        (clickHandler):



Canonical link: https://commits.webkit.org/34697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42645 268f45cc-cd09-0410-ab3c-d52691b4dbfc